hoàn thiện phần ảnh và link đăng kí toàn bộ ảnh để width= 100% form đăng kí lấy sẵn

--- a/style.scss
+++ b/style.scss
@@ -8,8 +8,7 @@
 }
 .navbar-default {
   background-color: transparent;
-  /* border-color: #e7e7e7; */
-  border: none;
+  border: none;       // có thể đè lên file bootstrap khi sắp xếp file bootstrap lên trước style
   font-family: font1;
   padding-top: 28px;
   margin-bottom: 8px;
@@ -37,7 +36,9 @@
   margin-top: 29px;
 }
 .camketvietlam{
+  overflow: hidden;
   position: relative;
+  width: 100%;
   .dangki{
     position: absolute;
     bottom: 18px;
@@ -50,12 +51,14 @@
     font-size: 20px;
     border-radius: 5px 10px;
      }
+  img{ width:100%;} //để ý ảnh phải để width bằng 100 mới ko bị lỗi
 }
 .reason{
   background-color: #0f75bc;
-  height: 260px;
+  overflow: hidden;
+  font-size: 14px;
+  font-family: Arial;
   .lido{
-    font-family: Arial;
     font-size: 28px;
     color: white;
     padding-top: 25px;
@@ -63,3 +66,97 @@
     text-transform: uppercase;
   }
 }
+.lido-cot1{
+  color: white;
+  text-align: left;
+  padding-top: 12px;
+  padding-left: 90px;
+  b{font-size: 24px;}
+  span{font-size: 80px;}
+  p{font-size: 20px;}
+}
+.chuyennganh{
+  background-color: #395e94;
+}
+#nganh li{
+  font-family: Arial;
+  font-size: 20px;
+  color: white;
+  background: url(image/icon-nganh.png) no-repeat top 3px left;
+  list-style: none;
+  padding-left: 33px;
+  padding-bottom: 8px;
+
+}
+.chuyennganh{
+  position: relative;
+  height: 540px;
+  .tittle-chuyennganh{
+    font-size: 38px;
+    color: #e4ec00;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 26px;
+    margin-bottom: 48px;
+
+  }
+}
+.caodang{
+  font-size: 24px;
+  color: #e4ec00;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 10px;
+}
+#caodang1 span{
+  font-size: 16px;
+  font-family: Arial;
+  color: white;
+  padding-left: 20px;
+  }
+.caodanghanoi {
+  font-size: 24px;
+  color: #e4ec00;
+  /* text-align: center; */
+  text-transform: uppercase;
+  margin-top: 38px;
+  padding-left: 30px;
+  margin-bottom: 5px;
+}
+.anh-chuyennganh {
+  position: absolute;
+  z-index: 9999;
+    right: 0;
+}
+.anh-bangcap{
+  img{width: 100%;} //để ý ảnh phải để width bằng 100 mới ko bị lỗi
+}
+/*start link đang kí*/
+.contact{
+  background-color:#b0b0b0 ;
+}
+.contact-form {
+  background-color: #395e94;
+  padding: 35px 25px 125px;
+  border-radius: 8px 8px 8px 8px;
+
+}
+#dathang-form button {
+  border-radius: 5px;
+  border: none;
+  padding: 8px;
+  font-size: 14px;
+  color: blue;
+  text-transform: uppercase;
+  font-family: Arial;
+  float: right;
+  font-weight: bold;
+}
+.contact-title {
+  color: white;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  text-align: center;
+}
+/*end link đang kí*/
